--- a/HangMan/index.html
+++ b/HangMan/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
+  <div class="message">It was face. You lost!!!</div>
   <div class="container">
-    <h1>HangMan</h1>
+    <h1>Hang</h1>
     <h2>Type a letter on your keyboard</h2>
     <div class="first">
+      <div class="man"><img src="imgs/0.png" alt="man"></div>
       <div class="details">
         <p>Wrong Letters: <span id="wrong">0</span></p>
         <p>Guesses Left: <span id="guess">10</span></p>
         <p>Wins: <span id="wins">0</span></p>
       </div>
-      <div class="man"></div>
+      
     </div>
     <div class="second"></div>
   </div>
