--- a/HangMan/index.html
+++ b/HangMan/index.html
@@ -15,11 +15,10 @@
     <div class="first">
       <div class="man"><img src="imgs/0.png" alt="man"></div>
       <div class="details">
-        <p>Wrong Letters: <span id="wrong">0</span></p>
         <p>Guesses Left: <span id="guess">10</span></p>
+        <p>Losses: <span id="losses">0</span></p>
         <p>Wins: <span id="wins">0</span></p>
       </div>
-      
     </div>
     <div class="second"></div>
   </div>
